# score-api

./: Dockerfile.dev  MANIFEST.in  Makefile  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt  setup.py  start.sh  test.sh
migrations/: env.py
migrations/versions/: 9ed1eef0eb90_initial.py
score/: VERSION.txt  app.py  cli.py  config.py  db.py  default.toml  security.py
score/models/: user.py
score/routes/: user.py
